# gpt-review

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  main.py  prompt.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gpt_review/: gpt_review.py
