[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["takatomatsumura <takato_matsumura@demia.co.jp>"]
description = ""
name = "gpt-review-test"
packages = [{include = "gpt_review"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
openai = "^1.30.1"
python = "^3.12"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
toml-sort = "^0.23.1"
